feat: Implement user profile management and exercise routine generation
- Added HistoryComponent to display past exercise routines with loading state management.
- Created ProfileService for user profile data handling, including fetching and saving user profiles.
- Developed ProfileShellComponent to manage user profile display and editing.
- Established routing for profile-related components with authentication guard.
- Introduced ProfileFormComponent for user input on profile details.
- Enhanced RoutineComponent to generate exercise routines based on user profiles.
- Integrated ExerciseRoutineService for Firebase function calls to generate routines.
- Implemented RoutinePersistenceService for saving and loading routines from Firestore.
- Added Firebase function to generate exercise routines using AI, incorporating user exercise history.
- Updated UI components with Angular Material for better user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ lerna-debug.log*
 
 .DS_Store
 node_modules/
+firebase/firebase-export-1744963693881myRjx5/firestore_export/firestore_export.overall_export_metadata
