--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@angular/common": "^19.2.2",
     "@angular/compiler": "^19.2.2",
     "@angular/core": "^19.2.2",
+    "@angular/fire": "^19.1.0",
     "@angular/forms": "^19.2.2",
     "@angular/material": "19.2.4",
     "@angular/platform-browser": "^19.2.2",
@@ -41,6 +42,7 @@
     "rxfire": "^6.1.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
+    "zod": "^3.24.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
