--- a/firebase/package.json
+++ b/firebase/package.json
@@ -21,10 +21,15 @@
   "packageManager": "pnpm@10.6.5",
   "main": "functions/lib/index.js",
   "dependencies": {
+    "@genkit-ai/core": "^1.6.0",
+    "@genkit-ai/flow": "^0.5.17",
+    "@genkit-ai/googleai": "^1.6.0",
     "@google-cloud/functions-framework": "^3.4.6",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2",
-    "ufo": "^1.5.4"
+    "genkit": "^1.6.0",
+    "ufo": "^1.5.4",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^4.0.1",
