--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "rxfire": "^6.1.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
+    "unsplash-js": "^7.0.19",
     "zod": "^3.24.3",
     "zone.js": "~0.15.0"
   },
